<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_a">


    <TextView
        android:id="@+id/maeju"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/MAEJU"
        android:textAppearance="@style/maeju"
        app:layout_constraintBottom_toTopOf="@+id/my_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <TextView
        android:id="@+id/my_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/maeju"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="12dp"
        android:gravity="top"
        android:text="내 정보"
        android:textAppearance="@style/some_id"
        app:layout_constraintBottom_toTopOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />

    <View
        android:id="@+id/profile_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/my_account"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ipp"
        app:layout_constraintBottom_toTopOf="@+id/line_1"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/profile_image"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="email"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/line_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.333" />


    <TextView
        android:id="@+id/name"
        android:layout_width="212dp"
        android:layout_height="68dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:gravity="start"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:onClick="goprofile"
        android:text="name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_account" />

    <View
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/line_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/total_main_point"
        android:layout_width="90dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/total_main_point"
        android:textAppearance="@style/some_id"
        app:layout_constraintBottom_toTopOf="@+id/mainpoint"
        app:layout_constraintEnd_toStartOf="@+id/line_5"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_1"
        app:layout_constraintVertical_bias="0.736" />


    <View
        android:id="@+id/line_5"
        android:layout_width="1dp"
        android:layout_height="100dp"
        android:layout_marginTop="220dp"
        android:layout_weight="1"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_quiz_point"
        android:layout_width="90dp"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/total_quiz_point"
        android:textAppearance="@style/some_id"
        app:layout_constraintBottom_toTopOf="@+id/quizpoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toEndOf="@+id/line_5"
        app:layout_constraintTop_toBottomOf="@+id/line_1"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/mainpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_1"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto"
        android:text="main_point"
        android:textColor="@android:color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/line_2"
        app:layout_constraintEnd_toStartOf="@+id/line_5"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/quizpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_quiz_point"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/line_2"
        android:fontFamily="@font/roboto"
        android:text="quiz_point"
        android:textColor="@android:color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/line_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toEndOf="@+id/line_5"
        app:layout_constraintTop_toBottomOf="@+id/line_1"
        app:layout_constraintVertical_bias="0.707" />

    <View
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_5"
        app:layout_constraintVertical_bias="0.087"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/buttonGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:background="@drawable/upload_btn"
        android:backgroundTint="#f9f9f6"
        android:fontFamily="@font/roboto"
        android:gravity="left"
        android:onClick="guide"
        android:text="@string/공지사항"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:backgroundTint="#f9f9f6"
        app:layout_constraintBottom_toTopOf="@+id/line_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_2"
        app:layout_constraintVertical_bias="0.304" />

    <View
        android:id="@+id/line_3"
        android:layout_width="335dp"
        android:layout_height="1dp"
        android:layout_marginTop="104dp"
        android:layout_weight="1"
        android:background="#C4C4C4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_2"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/btn_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_3"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/upload_btn"
        android:backgroundTint="#f9f9f6"
        android:fontFamily="@font/roboto"
        android:gravity="left"
        android:onClick="set"
        android:text="@string/앱설정"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:backgroundTint="#f9f9f6"
        app:layout_constraintBottom_toTopOf="@+id/line_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_3"
        app:layout_constraintVertical_bias="0.485" />

    <View
        android:id="@+id/line_4"
        android:layout_width="335dp"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="#C4C4C4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_3"
        app:layout_constraintVertical_bias="0.326" />

    <Button
        android:id="@+id/buttonRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_4"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/upload_btn"
        android:backgroundTint="#f9f9f6"
        android:fontFamily="@font/roboto"
        android:gravity="left"
        android:onClick="refresh"
        android:text="@string/새로고침"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:backgroundTint="#f9f9f6"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_4"
        app:layout_constraintVertical_bias="0.282" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="295dp"
        android:layout_height="67dp"

        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:background="@drawable/submit_btn"
        android:fontFamily="@font/roboto"
        android:text="@string/과제제출하기"
        android:textColor="@android:color/black"
        app:backgroundTint="#61863F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_4"
        app:layout_constraintVertical_bias="1.0" />




</androidx.constraintlayout.widget.ConstraintLayout>